# scout_commander

./: README.md
scout_mini_control/: package.xml  setup.py
scout_mini_control/config/: cyclonedds.xml  ekf.yaml  nav2.yaml  nav2_test.yaml  slam.yaml
scout_mini_control/launch/: map_saved.launch.py  nav2.launch.py  navigation_bringup.launch.py  rviz2.launch.py  scout_bringup.launch.py  scout_navigation.launch.py  waypoint_follower.launch.py
scout_mini_control/launch/include/: localization.launch.py  navigation.launch.py  slam.launch.py
scout_mini_control/launch/old_launch/: map_saved.launch.py  nav2.launch.py
scout_mini_control/maps/: my_map.pgm  my_map.yaml  test1.pgm  test1.yaml  waypoints.txt
scout_mini_control/params/: ekf_params.yaml  nav2_params.yaml  scout_mini.json  slam_params.yaml
scout_mini_control/scout_mini_control/: waypoint_follower.py
scout_mini_control/scout_mini_control/include/: robot_navigator.py
scout_mini_description/: setup.py
scout_mini_description/config/: localization.rviz  mapping.rviz  nav2.rviz  nav2_visualization.rviz
scout_mini_description/launch/: scout_mini.launch.py  scout_tf.launch.py  scout_viz.launch.py
scout_mini_description/models/commander_slim/xacro/: commander_slim.xacro  robosense_16.xacro
scout_mini_description/models/scout_mini/xacro/: scout_mini.xacro  (+3 more)
scout_mini_gazebo/: package.xml  setup.cfg  setup.py
scout_mini_gazebo/launch/: scout_tf.launch.py  scout_viz.launch.py
scout_mini_gazebo/scout_mini_gazebo/: scout_mini_gazebo.py
scout_mini_gazebo/worlds/: obstacle_simulation.sdf
(+3 files in other folders)
