<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_mini_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liamd@indrorobotics.com">liamd</maintainer>
  <license>TODO: License declaration</license>

  <depend>rtabmap_ros</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
